Fixing plan cacheing between pages, making each plan section drag u to map, forcing plan to be calc after forecasting. updating API page with new routes and suggestions
